--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="container">
+  <div class="row align-items-start">
+    <div class="col">
+    </div>
+    <div class="col">
+      <h1>Home#index</h1>
+        <p>Find me in app/views/home/index.html.erb</p>
+    </div>
+    <div class="col">
+    </div>
+</div>
+
