--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,10 +3,31 @@
     <div class="col">
     </div>
     <div class="col">
-      <h1>Home#index</h1>
-        <p>Find me in app/views/home/index.html.erb</p>
+      <h1>Realiza tu Reserva</h1>
+        <div class="row">
+        <div class="col">
+          <input type="text" class="form-control" placeholder="Nombre" aria-label="First name">
+        </div>
+        <div class="col">
+          <input type="text" class="form-control" placeholder="Apellido" aria-label="Last name">
+        </div>
+      </div>
+      <select class="form-select mt-2" aria-label="Default select example">
+        <option selected>Selecciona Mesa o Salon</option>
+        <option value="1">Mesa</option>
+        <option value="2">Salon</option>
+      </select>
+      <select class="form-select mt-2" aria-label="Default select example">
+        <option selected>Cantidad de personas</option>
+        <option value="1">2-4</option>
+        <option value="2">+5</option>
+      </select>
+      <button type="submit" class="btn btn-primary mt-1">Reservar</button>
+
     </div>
     <div class="col">
     </div>
 </div>
+
+
 
