--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,8 +2,8 @@
   <div class="row align-items-start">
     <div class="col">
     </div>
-    <div class="col">
-      <h1>Realiza tu Reserva</h1>
+    <div class="col border border-dark rounded-3 mb-5">
+      <h2>Realiza tu Reserva</h2>
         <div class="row">
         <div class="col">
           <input type="text" class="form-control" placeholder="Nombre" aria-label="First name">
@@ -12,6 +12,11 @@
           <input type="text" class="form-control" placeholder="Apellido" aria-label="Last name">
         </div>
       </div>
+        <div class="row">
+          <div class="col">
+            <input type="email" class="form-control mt-1" placeholder="Email" aria-label="Email">
+          </div>
+        </div>
       <select class="form-select mt-2" aria-label="Default select example">
         <option selected>Selecciona Mesa o Salon</option>
         <option value="1">Mesa</option>
@@ -19,10 +24,10 @@
       </select>
       <select class="form-select mt-2" aria-label="Default select example">
         <option selected>Cantidad de personas</option>
-        <option value="1">2-4</option>
+        <option value="1">1-4</option>
         <option value="2">+5</option>
       </select>
-      <button type="submit" class="btn btn-primary mt-1">Reservar</button>
+      <button type="submit" class="btn btn-primary my-2">Reservar</button>
 
     </div>
     <div class="col">
