modificacion production.rb

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,5 +14,11 @@
  *= require bootstrap/scss/bootstrap
  *= require_tree .
  *= require_self
+ *= require scaffolds
  */
  @import "bootstrap";
+
+body {
+    font-family: raleway, sans-serif;
+    background-color: black;
+}
