--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,7 +25,8 @@
       <select class="form-select mt-2" aria-label="Default select example">
         <option selected>Cantidad de personas</option>
         <option value="1">1-4</option>
-        <option value="2">+5</option>
+        <option value="2">5-10</option>
+        <option value="2">11-20</option>
       </select>
       <button type="submit" class="btn btn-primary my-2">Reservar</button>
 
