--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,3 +22,11 @@ body {
     font-family: raleway, sans-serif;
     background-color: black;
 }
+.carousel-inner, image {
+    height: 300px;
+    width: 100%;
+    margin-top: -60px;
+}
+.container-form {
+    padding-top: 2em;
+}
