--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,33 @@
-<div class="container">
+<div class="container-fluid">
+  <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active" data-bs-interval="10000">
+      <%= image_tag("b.jpg", {:style => "d-block;"}) %>
+    </div>
+    <div class="carousel-item" data-bs-interval="2000">
+      <%= image_tag("c.jpg", {:style => "d-block;"}) %>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag("d.jpg", {:style => "d-block;"}) %>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+</div>
+
+<div class="container-form">
   <div class="row align-items-start">
     <div class="col">
     </div>
     <div class="col border border-dark rounded-3 mb-5">
-      <h2>Realiza tu Reserva</h2>
+      <h2 class="text-white">Realiza tu Reserva</h2>
         <div class="row">
         <div class="col">
           <input type="text" class="form-control" placeholder="Nombre" aria-label="First name">
