--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,7 +20,7 @@
 
 body {
     font-family: raleway, sans-serif;
-    background-color: black;
+    background-color: white;
 }
 .carousel-inner, image {
     height: 300px;
