--- a/app/views/home/_login.html.erb
+++ b/app/views/home/_login.html.erb
@@ -3,7 +3,7 @@
     <div class="col">
     </div>
     <div class="col border border-dark rounded-3 mb-5">
-      <h2 class="text-white">Realiza tu Reserva</h2>
+      <h2 class="text-dark">Realiza tu Reserva</h2>
         <div class="row">
         <div class="col">
           <input type="text" class="form-control" placeholder="Nombre" aria-label="First name">
