--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 
   <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Menu</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,6 +42,23 @@
 
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
+
+      <footer class="fixed-bottom text-center text-white">
+        <spam>Bar Santa Isabel Copyright 2022</spam>
+        <p >Visítanos en:
+            <br>
+          📍 Santa Isabel 0285, Providencia.
+          Lunes a Jueves: 17:00 a 01:00 hrs.
+          Viernes: 17:000 a 02:00 hrs.
+          Sábado: 14:00 a 02:00 hrs.
+          Domingo: 14:00 a 00:00 hrs.
+            <br>
+          📍Francisco Bilbao 890, Providencia.
+          Lunes a Jueves: 17:00 a 01:00 hrs.
+          Viernes y Sábado: 17:00 a 01:30 hrs.
+          Domingo: 12:00 a 17:00 hrs.
+        </p>
+      </footer>
     <%= yield %>
   </body>
 </html>
