--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,7 +20,7 @@
 
 body {
     font-family: raleway, sans-serif;
-    background-color: white;
+    background-color: #040404;
 }
 .carousel-inner, image {
     height: 200px;
@@ -31,38 +31,50 @@ body {
     padding-top: 2em;
 }
 
-#form {
-    width: 250px;
-    margin: 0 auto;
-    height: 50px;
+.navbar {
+    background-color: #000;
+    text-decoration: none;
+
+}
+
+footer {
+    background-color: #000;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #040404;
   }
   
-  #form p {
+  li a {
+    display: block;
+    color: white;
+    padding: 10px 25px;
+    text-decoration: none;
     text-align: center;
   }
   
-  #form label {
-    font-size: 20px;
+  /* Change the link color on hover */
+  li a:hover {
+    background-color: #990C4E;
+    color: #000;
   }
-  
-  input[type="radio"] {
-    display: none;
+
+  .carousel-item > img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 100%;
+    height: 40rem;
+    margin: 0 auto;
   }
-  
-  label {
-    color: grey;
-  }
-  
-  .clasificacion {
-    direction: rtl;
-    unicode-bidi: bidi-override;
-  }
-  
-  label:hover,
-  label:hover ~ label {
-    color: orange;
-  }
-  
-  input[type="radio"]:checked ~ label {
-    color: orange;
+
+  p {
+     font-weight: 10px;
+     color: #fff;
+     font-size: small;
   }
