cosas de layoud

--- a/app/views/home/_login.html.erb
+++ b/app/views/home/_login.html.erb
@@ -20,8 +20,9 @@
                 <input type="email" class="form-control mt-1" name="email" placeholder="Email" aria-label="Email">
                 <input type="time" class="form-control mt-1" name="time" placeholder="Hora" aria-label="time">
                 <input type="date" class="form-control mt-1" name="date" placeholder="Fecha" aria-label="date">
+
                 <select class="form-select mt-2" name="firstselect" aria-label="Default select example">
-                  <option selected >Selecciona Mesa o Salon</option>
+                <option value="" disabled selected hidden>Selecciona Mesa o Salon</option>
                   <option value="1">Mesa</option>
                   <option value="2">Salon</option>
                 </select>
@@ -35,6 +36,8 @@
             </end>
         </div>
       <% end %>
+
+
     </div>
       <!--3columna-->
       <div class="col-4">
