--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
 
-      <footer class="fixed-bottom text-center text-white">
+      <footer class="fixed text-center text-white mt-5">
         <spam>Bar Santa Isabel Copyright 2022</spam>
         <p >Visítanos en:
             <br>
