--- a/app/views/home/_logout.html.erb
+++ b/app/views/home/_logout.html.erb
@@ -1,1 +1,12 @@
-<h1 class="text-center text-white">Realiza tu Reserva aqui! <%= link_to 'Pincha', new_client_devise_registration_path %></h1>
+    <div class="container-forma mb-5">
+        <div class="row">
+            <div class="col-4">
+            </div>
+            <div class="col-4">
+                <%= image_tag("a.jpg",:size => "400x400") %>
+            </div>
+            <div class="col-4">
+            </div>
+        </div>
+        <h1 class="text-center text-white">Realiza tu Reserva aqui! <%= link_to 'Pincha', new_client_devise_registration_path %></h1>
+    </div>
