--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,12 +39,7 @@
     </div>
   </div>
 </nav>
-
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
-
-      <footer class="fixed text-center text-white mt-5">
-        <spam>Bar Santa Isabel Copyright 2022</spam>
+      <footer class="fixed-bottom text-center text-white">
         <p >Visítanos en:
             <br>
           📍 Santa Isabel 0285, Providencia.
@@ -52,11 +47,12 @@
           Viernes: 17:000 a 02:00 hrs.
           Sábado: 14:00 a 02:00 hrs.
           Domingo: 14:00 a 00:00 hrs.
-            <br>
-          📍Francisco Bilbao 890, Providencia.
+                    📍Francisco Bilbao 890, Providencia.
           Lunes a Jueves: 17:00 a 01:00 hrs.
           Viernes y Sábado: 17:00 a 01:30 hrs.
           Domingo: 12:00 a 17:00 hrs.
+
+
         </p>
       </footer>
     <%= yield %>
