--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -66,3 +66,13 @@ ul {
     margin-top: -35px;
     margin-bottom: 3em;
   }
+
+  .a {
+    background-color: #990C4E;
+  }
+
+  .small {
+    text-align: center;
+    width: 10px;
+    height: 10px;
+  }
