--- a/app/views/home/_logout.html.erb
+++ b/app/views/home/_logout.html.erb
@@ -10,3 +10,19 @@
         </div>
         <h1 class="text-center text-white">Realiza tu Reserva aqui! <%= link_to 'Pincha', new_client_devise_registration_path %></h1>
     </div>
+      <footer class="fixed-bottom text-center text-white">
+        <p >Visítanos en:
+            <br>
+          📍 Santa Isabel 0285, Providencia.
+          Lunes a Jueves: 17:00 a 01:00 hrs.
+          Viernes: 17:000 a 02:00 hrs.
+          Sábado: 14:00 a 02:00 hrs.
+          Domingo: 14:00 a 00:00 hrs.
+                    📍Francisco Bilbao 890, Providencia.
+          Lunes a Jueves: 17:00 a 01:00 hrs.
+          Viernes y Sábado: 17:00 a 01:30 hrs.
+          Domingo: 12:00 a 17:00 hrs.
+
+
+        </p>
+      </footer>
